[gd_scene load_steps=7 format=3 uid="uid://d3eh0vh6v1js"]

[ext_resource type="Script" path="res://NPC_car_3.gd" id="1_ne417"]
[ext_resource type="Script" path="res://RayGeneral.gd" id="2_g4ult"]
[ext_resource type="Texture2D" uid="uid://pa2d0w1wc8l1" path="res://Police (16 x 16).png" id="3_uklx6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifiu7"]
size = Vector2(24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_68aes"]
atlas = ExtResource("3_uklx6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pbpgm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_68aes")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="NPC_Car_2" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
motion_mode = 1
script = ExtResource("1_ne417")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 3.14159
shape = SubResource("RectangleShape2D_ifiu7")

[node name="RayCastFore" type="RayCast2D" parent="."]
rotation = -3.14159
target_position = Vector2(-60, 0)
script = ExtResource("2_g4ult")

[node name="RayCastRight" type="RayCast2D" parent="."]
rotation = 1.9443
target_position = Vector2(0, -45)
script = ExtResource("2_g4ult")

[node name="RayCastLeft" type="RayCast2D" parent="."]
rotation = -1.94429
target_position = Vector2(0, 45)
script = ExtResource("2_g4ult")

[node name="RayCastRearLeft" type="RayCast2D" parent="."]
rotation = -1.34564
target_position = Vector2(30, 30)
script = ExtResource("2_g4ult")

[node name="RayCastRearRight" type="RayCast2D" parent="."]
rotation = 1.34565
target_position = Vector2(30, -30)
script = ExtResource("2_g4ult")

[node name="RayCastForeLeft" type="RayCast2D" parent="."]
rotation = -2.54294
target_position = Vector2(-35, 35)
script = ExtResource("2_g4ult")

[node name="RayCastForeRight" type="RayCast2D" parent="."]
rotation = 2.54295
target_position = Vector2(-35, -35)
script = ExtResource("2_g4ult")

[node name="RayCastFore2" type="RayCast2D" parent="."]
rotation = -3.14159
scale = Vector2(7, 7)
target_position = Vector2(-60, 0)
script = ExtResource("2_g4ult")

[node name="RayCastRight2" type="RayCast2D" parent="."]
rotation = 1.9443
scale = Vector2(6, 6)
target_position = Vector2(0, -45)
script = ExtResource("2_g4ult")

[node name="RayCastLeft2" type="RayCast2D" parent="."]
rotation = -1.94429
scale = Vector2(6, 6)
target_position = Vector2(0, 45)
script = ExtResource("2_g4ult")

[node name="RayCastRearLeft2" type="RayCast2D" parent="."]
rotation = -1.34564
scale = Vector2(6, 6)
target_position = Vector2(30, 30)
script = ExtResource("2_g4ult")

[node name="RayCastRearRight2" type="RayCast2D" parent="."]
rotation = 1.34565
scale = Vector2(6, 6)
target_position = Vector2(30, -30)
script = ExtResource("2_g4ult")

[node name="RayCastForeLeft2" type="RayCast2D" parent="."]
rotation = -2.53073
scale = Vector2(6, 6)
target_position = Vector2(-35, 35)
script = ExtResource("2_g4ult")

[node name="RayCastForeRight2" type="RayCast2D" parent="."]
rotation = 2.53073
scale = Vector2(6, 6)
target_position = Vector2(-35, -35)
script = ExtResource("2_g4ult")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
rotation = 0.00174284
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_pbpgm")
